--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>https://vk.com/photo157576733_457239208?photo_feed=1Автоэътимод</h1>
+        <h1>Автоэътимод</h1>
         <nav>
             <a href="index.html">Главная</a>
             <a href="about.html">О компании</a>
